{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 29,
  "lineage": "fd441294-eb9e-9574-b9c8-c1f9a4c56401",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498790386857:vpc/vpc-037e0a05e43734924",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ed71e1cd00dc95d2",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0034b25f6d4818def",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-037e0a05e43734924",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-018de3b77b3c1a550",
            "owner_id": "498790386857",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:498790386857:loadbalancer/app/assignment6-alb/a0f4dd8f7f78103f",
            "arn_suffix": "app/assignment6-alb/a0f4dd8f7f78103f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "assignment6-alb-2048830476.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:498790386857:loadbalancer/app/assignment6-alb/a0f4dd8f7f78103f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "assignment6-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-056a667ae7b7ef469"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01423dbc522e56bd0"
              },
              {
                "subnet_id": "subnet-05d71b2e22f5833af"
              },
              {
                "subnet_id": "subnet-05e00e6d935c93044"
              },
              {
                "subnet_id": "subnet-079324ead86e488c2"
              },
              {
                "subnet_id": "subnet-0c46929ba996bb101"
              },
              {
                "subnet_id": "subnet-0d5ddd13f0ef33fff"
              }
            ],
            "subnets": [
              "subnet-01423dbc522e56bd0",
              "subnet-05d71b2e22f5833af",
              "subnet-05e00e6d935c93044",
              "subnet-079324ead86e488c2",
              "subnet-0c46929ba996bb101",
              "subnet-0d5ddd13f0ef33fff"
            ],
            "vpc_id": "vpc-037e0a05e43734924",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:498790386857:loadbalancer/app/assignment6-alb/a0f4dd8f7f78103f"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:498790386857:listener/app/assignment6-alb/a0f4dd8f7f78103f/19a556e326cb0639",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:498790386857:targetgroup/assignment6-tg/1554a1f63e2af21b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:498790386857:listener/app/assignment6-alb/a0f4dd8f7f78103f/19a556e326cb0639",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:498790386857:loadbalancer/app/assignment6-alb/a0f4dd8f7f78103f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:498790386857:listener/app/assignment6-alb/a0f4dd8f7f78103f/19a556e326cb0639"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:498790386857:targetgroup/assignment6-tg/1554a1f63e2af21b",
            "arn_suffix": "targetgroup/assignment6-tg/1554a1f63e2af21b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:498790386857:targetgroup/assignment6-tg/1554a1f63e2af21b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "assignment6-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-037e0a05e43734924"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:498790386857:targetgroup/assignment6-tg/1554a1f63e2af21b"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498790386857:security-group/sg-056a667ae7b7ef469",
            "description": "Allow inbound HTTP on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056a667ae7b7ef469",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "assignment6-alb-sg",
            "name_prefix": "",
            "owner_id": "498790386857",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-037e0a05e43734924"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "498790386857",
            "id": "sg-056a667ae7b7ef469",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498790386857:security-group/sg-0e17cc3fa4c1acc3a",
            "description": "Allow traffic from ALB on port 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e17cc3fa4c1acc3a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-056a667ae7b7ef469"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "assignment6-ecs-sg",
            "name_prefix": "",
            "owner_id": "498790386857",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-037e0a05e43734924"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "498790386857",
            "id": "sg-0e17cc3fa4c1acc3a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}